<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scrollview_detail_mv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context="com.example.android.materialme.DetailActivity">
                    <ImageView
                        android:id="@+id/img_detail_film"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@color/colorSecondaryText"
                        tools:ignore="ContentDescription" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:background="@drawable/image_shadow"
                        android:layout_alignParentBottom="true"/>
                    <TextView
                        android:id="@+id/tv_detail_movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/img_detail_film"
                        android:padding="16dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:textSize="28sp"
                        android:textColor="@color/colorText"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_detail_movie_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/img_detail_film"
                        android:padding="16dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_below="@+id/tv_detail_movie_title"
                        android:textColor="@color/colorText" />

                </RelativeLayout>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@android:color/transparent"
                    android:theme="@style/TransparentToolbar">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/btn_close_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/ic_close"
                            tools:ignore="ContentDescription" />
                    </RelativeLayout>

                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorText"/>

                <TextView
                    android:id="@+id/tv_detail_movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/colorText"/>
            </LinearLayout>
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>